full_error.txt
Traceback (most recent call last):
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'elif'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\debug_view.py", line 27, in <module>
    response = my_posts(request)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\publications\views.py", line 300, in my_posts
    return render(request, 'pages/meus_arquivos.html', context)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\defaulttags.py", line 862, in do_for
    nodelist_loop = parser.parse(
        (
    ...<2 lines>...
        )
    )
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\defaulttags.py", line 962, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\defaulttags.py", line 976, in do_if
    nodelist = parser.parse(("endif",))
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Zafira\Desktop\EtapDigitalPAP\venv\Lib\site-packages\django\template\base.py", line 567, in invalid_block_tag
    raise self.error(
    ...<8 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 100: 'elif', expected 'endif'. Did you forget to register or load this tag?
